Fix font masthead size on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -65,6 +65,10 @@
     background-size: cover;
 }
 
+.masthead .masthead-heading {
+    font-size: 2.3rem;
+}
+
 .lead-box {
     font-size: 1rem;
     border: 8px solid #1abc9c;
@@ -104,5 +108,9 @@
 
     .lead-box {
         font-size: 1.2rem;
+    }
+
+    .masthead .masthead-heading {
+        font-size: 2.75rem;
     }
 }
